# mark-down-qt-reader

./: CMakeLists.txt  example.md
src/: main.cpp  mainwindow.cpp  mainwindow.hpp  markdown_parser.cpp  markdown_parser.hpp
tests/: CMakeLists.txt
tests/markdown_parser_test_src/: main.cpp  markdown_parser_test.cpp  markdown_parser_test.hpp
